[package]
name = "loki-emu"
version = "0.1.0"
edition = "2021"

#[cfg(test)]See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
softbuffer = "0.4.0"
winit = "0.29.9"
winit_input_helper = "0.15.1"
